Fixed height and alignment of readonlyfields.
Setting height to 32px seems not to work when adding some padding to the
element. So remove the height.

--- a/formbar/templates/formbar.css
+++ b/formbar/templates/formbar.css
@@ -20,7 +20,7 @@ select[multiple], textarea {
 div.readonlyfield {
   border-radius: 3px 3px 3px 3px;
   background-color: #e0e0e0;
-  height: 32px;
+  padding: 8px;
   margin-bottom: 10px;
 }
 
